--- a/BankSelenium/pom.xml
+++ b/BankSelenium/pom.xml
@@ -15,11 +15,23 @@
     </resources>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+      	<groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefile-plugin</artifactId>
+        <version>2.12</version>
+        <inherited>true</inherited>
+        <configuration>
+          <suiteXmlFiles>
+          	<suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
         </configuration>
       </plugin>
     </plugins>
@@ -41,6 +53,11 @@
             <artifactId>testng</artifactId>								
             <version>6.8</version>								
             <scope>test</scope>							  			
-       </dependency>				
+       </dependency>
+       <dependency>
+    		<groupId>org.apache.poi</groupId>
+   			<artifactId>poi-ooxml</artifactId>
+    		<version>3.8-beta4</version>
+		</dependency>				
 </dependencies>
 </project>
