--- a/BankSelenium/pom.xml
+++ b/BankSelenium/pom.xml
@@ -4,60 +4,44 @@
   <artifactId>BankSelenium</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <build>
-    <sourceDirectory>src</sourceDirectory>
-    <resources>
-      <resource>
-        <directory>src</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-    </resources>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
+        <version>3.3</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
       </plugin>
       <plugin>
-      	<groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefile-plugin</artifactId>
-        <version>2.12</version>
-        <inherited>true</inherited>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
         <configuration>
+          <forkCount>0</forkCount>
           <suiteXmlFiles>
-          	<suiteXmlFile>testng.xml</suiteXmlFile>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
     </plugins>
   </build>
-  <dependencies>			
-        <dependency>				
-             <groupId>junit</groupId>								
-             <artifactId>junit</artifactId>								
-             <version>3.8.1</version>								
-             <scope>test</scope>								
-        </dependency>				
-        <dependency>				
-            <groupId>org.seleniumhq.selenium</groupId>								
-            <artifactId>selenium-java</artifactId>								
-            <version>3.13.0</version>								
-		</dependency>				
-        <dependency>				
-            <groupId>org.testng</groupId>								
-            <artifactId>testng</artifactId>								
-            <version>6.8</version>								
-            <scope>test</scope>							  			
-       </dependency>
-       <dependency>
-    		<groupId>org.apache.poi</groupId>
-   			<artifactId>poi-ooxml</artifactId>
-    		<version>3.8-beta4</version>
-		</dependency>				
+  <dependencies>
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>2.52.0</version>
+    </dependency>
+    <dependency>
+  <groupId>org.testng</groupId>
+  <artifactId>testng</artifactId>
+  <version>6.8</version>
+</dependency>  
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>3.8-beta4</version>
+</dependency>
 </dependencies>
+
 </project>
